force-app/main/default/objects/Case/fields/ADF_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>ADF_Approved_Date__c</fullName>
    <label>ADF Approved Date</label>
    <type>DateTime</type>
</CustomField>