force-app/main/default/objects/Case/fields/ADF_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>ADF_Rejected_Date__c</fullName>
    <label>ADF Rejected Date</label>
    <type>DateTime</type>
</CustomField>