force-app/main/default/objects/Case/fields/ADF_Status__c.field-meta.xml
<CustomField>
    <fullName>ADF_Status__c</fullName>
    <defaultValue>"Draft"</defaultValue>
    <label>ADF Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approval_Status</valueSetName>
    </valueSet>
</CustomField>