force-app/main/default/objects/Case/fields/ADF_Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>ADF_Status_Flag__c</fullName>
    <formula>IMAGE( 
CASE(  ADF_Status__c , 
"Approved", "/img/samples/flag_green.gif",
"Draft", "/img/samples/flag_yellow.gif",
"Submitted", "/img/samples/flag_yellow.gif",
"Rejected", "/img/samples/flag_red.gif", 
"Cancelled", "/img/samples/flag_red.gif", 
"/s.gif"), 
"Status Flag")</formula>
    <label>ADF Status Flag</label>
    <type>Text</type>
</CustomField>