force-app/main/default/objects/Case/fields/ADF_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>ADF_Submitted_Date__c</fullName>
    <label>ADF Submitted Date</label>
    <type>DateTime</type>
</CustomField>