force-app/main/default/objects/Case/fields/ApheresisCenter__c.field-meta.xml
<CustomField>
    <fullName>ApheresisCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apheresis Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>CasesApheresisCenter</relationshipName>
    <type>Lookup</type>
</CustomField>