force-app/main/default/objects/Case/fields/ApheresisDatePlanned__c.field-meta.xml
<CustomField>
    <fullName>ApheresisDatePlanned__c</fullName>
    <label>Apheresis Date Planned</label>
    <type>DateTime</type>
</CustomField>