force-app/main/default/objects/Case/fields/ApheresisEndLatest__c.field-meta.xml
<CustomField>
    <fullName>ApheresisEndLatest__c</fullName>
    <label>Apheresis End Latest</label>
    <type>DateTime</type>
</CustomField>