force-app/main/default/objects/Case/fields/ApheresisPickupPlanned__c.field-meta.xml
<CustomField>
    <fullName>ApheresisPickupPlanned__c</fullName>
    <label>Apheresis Pickup Planned</label>
    <type>DateTime</type>
</CustomField>