force-app/main/default/objects/Case/fields/ApheresisStartEarliest__c.field-meta.xml
<CustomField>
    <fullName>ApheresisStartEarliest__c</fullName>
    <label>Apheresis Start Earliest</label>
    <type>DateTime</type>
</CustomField>