force-app/main/default/objects/Case/fields/Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approver_Comments__c</fullName>
    <description>Approver Comments</description>
    <inlineHelpText>Approver Comments</inlineHelpText>
    <label>Approver Comments</label>
    <type>TextArea</type>
</CustomField>