force-app/main/default/objects/Case/fields/CM_OperationalFunction__c.field-meta.xml
<CustomField>
    <fullName>CM_OperationalFunction__c</fullName>
    <description>3rd Level Case Management</description>
    <label>Case Mgt: Operational Function</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CM_ServiceModule__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1. Capture Site Certification Data (Site Set-Up)</fullName>
            </value>
            <value>
                <fullName>A2. Triage Site/HCP Certification Data</fullName>
            </value>
            <value>
                <fullName>A3. Confirm Certified Site Set-Up</fullName>
            </value>
            <value>
                <fullName>A4. Update Site Certification Data (Ongoing Management)</fullName>
            </value>
            <value>
                <fullName>B1. Receive Product Request</fullName>
            </value>
            <value>
                <fullName>B2. Reserve an Allocated Plant Appointment (PA)</fullName>
            </value>
            <value>
                <fullName>B3. Associate Patient with Allocated PA</fullName>
            </value>
            <value>
                <fullName>B4. Facilitate Second-Person Product Request Review</fullName>
            </value>
            <value>
                <fullName>B5. Forward Product Ordering Data</fullName>
            </value>
            <value>
                <fullName>C1. Respond to Aph PO Related Inquiries</fullName>
            </value>
            <value>
                <fullName>C2. Communicate Aph Transportation Status</fullName>
            </value>
            <value>
                <fullName>D1. Communicate Order Status/Batch ID</fullName>
            </value>
            <value>
                <fullName>D2. Communicate Kymriah Transportation Status</fullName>
            </value>
            <value>
                <fullName>E1. Communicate Rescheduling Request</fullName>
            </value>
            <value>
                <fullName>E2. Receive Cancellation Request</fullName>
            </value>
            <value>
                <fullName>E3. Triage Cancellation Request</fullName>
            </value>
            <value>
                <fullName>E4. Receive Finished Product Return Request</fullName>
            </value>
            <value>
                <fullName>E5. Triage Finished Product Return Request</fullName>
            </value>
            <value>
                <fullName>E6. Communicate Replacement Product Delivery Request</fullName>
            </value>
            <value>
                <fullName>A1. Respond to Post-Certification Inquiries</fullName>
            </value>
            <value>
                <fullName>A2. Respond to User Registration Inquiries</fullName>
            </value>
            <value>
                <fullName>A3. Provide Certification Training Materials</fullName>
            </value>
            <value>
                <fullName>B1. Respond to Lead-Time Inquiries</fullName>
            </value>
            <value>
                <fullName>B2. Respond to Order Process Inquiries</fullName>
            </value>
            <value>
                <fullName>B3. Respond to System/Platform Related Issues</fullName>
            </value>
            <value>
                <fullName>B4. Respond to Aph/Cryo Logistics &amp; Transportation Inquiries</fullName>
            </value>
            <value>
                <fullName>B5. Respond to Return/Cancellation Inquiries</fullName>
            </value>
            <value>
                <fullName>C1. Respond to Aph/Cryo Product Inquiries</fullName>
            </value>
            <value>
                <fullName>C2. Respond to Patient Treatment Related Inquiries</fullName>
            </value>
            <value>
                <fullName>C3. Respond to Kymriah Related Inquiries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>