force-app/main/default/objects/Case/fields/CM_ServiceModule__c.field-meta.xml
<CustomField>
    <fullName>CM_ServiceModule__c</fullName>
    <description>2nd level Case Management</description>
    <label>Case Mgt: Service Module</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CM_SupportArea__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site Data Management</fullName>
            </value>
            <value>
                <fullName>Product Request Processing</fullName>
            </value>
            <value>
                <fullName>Aph Tracking</fullName>
            </value>
            <value>
                <fullName>Cell Processing Surveillance</fullName>
            </value>
            <value>
                <fullName>Return, Cancellation &amp; Rescheduling</fullName>
            </value>
            <value>
                <fullName>Certification Follow-Up/FAQ</fullName>
            </value>
            <value>
                <fullName>General Order Process Queries</fullName>
            </value>
            <value>
                <fullName>Medical Information Support</fullName>
            </value>
            <value>
                <fullName>Coverage Approval Support</fullName>
            </value>
            <value>
                <fullName>Network Investigation</fullName>
            </value>
            <value>
                <fullName>Education/Info Resources</fullName>
            </value>
            <value>
                <fullName>Financial Support</fullName>
            </value>
            <value>
                <fullName>Travel Assistance</fullName>
            </value>
            <value>
                <fullName>Non-Certified Site/HCP Certification Inquiries</fullName>
            </value>
            <value>
                <fullName>Certified Site &amp; HCP Information</fullName>
            </value>
            <value>
                <fullName>Long-Term Patient Follow-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>