force-app/main/default/objects/Case/fields/CM_SupportArea__c.field-meta.xml
<CustomField>
    <fullName>CM_SupportArea__c</fullName>
    <description>1st level Case Management</description>
    <label>Case Mgt: Support Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Management</fullName>
                <label>I Order Management</label>
            </value>
            <value>
                <fullName>Certified Site / HCP Services</fullName>
                <label>II Certified Site / HCP Services</label>
            </value>
            <value>
                <fullName>Patient Services</fullName>
                <label>III Patient Services</label>
            </value>
            <value>
                <fullName>Referring Site Services</fullName>
                <label>IV Referring Site Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>