force-app/main/default/objects/Case/fields/DEMOPatientDOBcalc__c.field-meta.xml
<CustomField>
    <fullName>DEMOPatientDOBcalc__c</fullName>
    <formula>IF(LEN(Patient__c)&gt;0 
, Patient__r.DateOfBirth__c 
, Patient_s_Date_of_birth__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEMO Patient DOB calc</label>
    <type>Date</type>
</CustomField>