force-app/main/default/objects/Case/fields/DEMOPatientNamecalc__c.field-meta.xml
<CustomField>
    <fullName>DEMOPatientNamecalc__c</fullName>
    <formula>IF( 
LEN(Patient__c)&gt;0 
,Patient__r.FirstName__c&amp;&quot; &quot;&amp;Patient__r.LastName__c 
, Patient_s_First_Name__c &amp;&quot; &quot;&amp;Patient_s_Last_Name__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEMO Patient Name (calc)</label>
    <type>Text</type>
</CustomField>