force-app/main/default/objects/Case/fields/Estimated_Leukapheresis_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Leukapheresis_Shipment_Date__c</fullName>
    <description>Estimated Leukapheresis Shipment Date</description>
    <inlineHelpText>Estimated Leukapheresis Shipment Date</inlineHelpText>
    <label>Estimated Leukapheresis Shipment Date</label>
    <type>Date</type>
</CustomField>