force-app/main/default/objects/Case/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>FirstName</description>
    <inlineHelpText>FirstName</inlineHelpText>
    <label>FirstName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>