force-app/main/default/objects/Case/fields/GroupBatchNumber__c.field-meta.xml
<CustomField>
    <fullName>GroupBatchNumber__c</fullName>
    <label>Group Batch Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>