force-app/main/default/objects/Case/fields/Hair_Color__c.field-meta.xml
<CustomField>
    <fullName>Hair_Color__c</fullName>
    <description>Hair Color</description>
    <inlineHelpText>Hair Color</inlineHelpText>
    <label>Hair Color</label>
    <length>200</length>
    <type>Text</type>
</CustomField>