force-app/main/default/objects/Case/fields/HCP__c.field-meta.xml
<CustomField>
    <fullName>HCP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>HCP selected</description>
    <inlineHelpText>HCP selected</inlineHelpText>
    <label>HCP</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>