force-app/main/default/objects/Case/fields/InfusionCenter__c.field-meta.xml
<CustomField>
    <fullName>InfusionCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Infusion Center</description>
    <inlineHelpText>Infusion Center</inlineHelpText>
    <label>InfusionCenter</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (InfusionCenter)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>