force-app/main/default/objects/Case/fields/IsCertifiedSite__c.field-meta.xml
<CustomField>
    <fullName>IsCertifiedSite__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Certified Site</label>
    <type>Checkbox</type>
</CustomField>