force-app/main/default/objects/Case/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>LastName</description>
    <inlineHelpText>LastName</inlineHelpText>
    <label>Last Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>