force-app/main/default/objects/Case/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>linkes the patient ID and not a name to the treatment case</description>
    <inlineHelpText>type "ID" for lookup search</inlineHelpText>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>