force-app/main/default/objects/Case/fields/Patient_s_Date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>Patient_s_Date_of_birth__c</fullName>
    <description>Patient&#39;s Date of birth</description>
    <inlineHelpText>Patient&#39;s Date of birth</inlineHelpText>
    <label>Patient&#39;s Date of birth</label>
    <type>Date</type>
</CustomField>