force-app/main/default/objects/Case/fields/Patient_s_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_s_Last_Name__c</fullName>
    <description>Patient&#39;s Last Name</description>
    <inlineHelpText>Patient&#39;s Last Name</inlineHelpText>
    <label>Patient&#39;s Last Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>