force-app/main/default/objects/Case/fields/PickupCourierNumber__c.field-meta.xml
<CustomField>
    <fullName>PickupCourierNumber__c</fullName>
    <label>Pickup Courier #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>