force-app/main/default/objects/Case/fields/PickupLocation__c.field-meta.xml
<CustomField>
    <fullName>PickupLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pickup Location</description>
    <inlineHelpText>Pickup Location</inlineHelpText>
    <label>PickupLocation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (PickupLocation)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>