force-app/main/default/objects/Case/fields/PRF_RejectedDate__c.field-meta.xml
<CustomField>
    <fullName>PRF_RejectedDate__c</fullName>
    <label>Product Request Rejected Date</label>
    <type>DateTime</type>
</CustomField>