force-app/main/default/objects/Case/fields/PRF_Status__c.field-meta.xml
<CustomField>
    <fullName>PRF_Status__c</fullName>
    <defaultValue>"Draft"</defaultValue>
    <label>PRF Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approval_Status</valueSetName>
    </valueSet>
</CustomField>