force-app/main/default/objects/Case/fields/PRFApprovedDate__c.field-meta.xml
<CustomField>
    <fullName>PRFApprovedDate__c</fullName>
    <inlineHelpText>Product Request Approved Date/Time</inlineHelpText>
    <label>Product Request Approved Date</label>
    <type>DateTime</type>
</CustomField>