force-app/main/default/objects/Case/fields/PRFSubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>PRFSubmittedDate__c</fullName>
    <inlineHelpText>Product Request Submitted Date/Time</inlineHelpText>
    <label>Product Request Submitted Date</label>
    <type>DateTime</type>
</CustomField>