force-app/main/default/objects/Case/fields/ProcessOrderPrimary__c.field-meta.xml
<CustomField>
    <fullName>ProcessOrderPrimary__c</fullName>
    <label>Process Order Primary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>