force-app/main/default/objects/Case/fields/PurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrder__c</fullName>
    <label>Purchase Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>