force-app/main/default/objects/Case/fields/ShipToLocation__c.field-meta.xml
<CustomField>
    <fullName>ShipToLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ship-to Location</description>
    <inlineHelpText>Ship-to Location</inlineHelpText>
    <label>ShipToLocation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (ShipToLocation)</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>