force-app/main/default/objects/Case/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Site)</relationshipLabel>
    <relationshipName>CasesSite</relationshipName>
    <type>Lookup</type>
</CustomField>