force-app/main/default/objects/Case/fields/Status_Cell_Processing__c.field-meta.xml
<CustomField>
    <fullName>Status_Cell_Processing__c</fullName>
    <label>Status - Cell Processing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cell Processing - Waiting Confirmation</fullName>
                <default>true</default>
                <label>Cell Processing - Waiting Confirmation</label>
            </value>
            <value>
                <fullName>Cell Processing - Planned</fullName>
            </value>
            <value>
                <fullName>Cell Processing - Started</fullName>
            </value>
            <value>
                <fullName>Cell Processing - Start Reversed</fullName>
            </value>
            <value>
                <fullName>Cell Processing - Completed</fullName>
            </value>
            <value>
                <fullName>Cell Processing - Completion Reversed</fullName>
            </value>
            <value>
                <fullName>Primary Product - QA Released</fullName>
            </value>
            <value>
                <fullName>Primary Product - QA Release Reversed</fullName>
            </value>
            <value>
                <fullName>Cell Processing - Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>