force-app/main/default/objects/Case/fields/Status_Finished_Product_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Status_Finished_Product_Delivery__c</fullName>
    <label>Status - Finished Product Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finished Product Delivery - Waiting Confirmation</fullName>
                <default>true</default>
                <label>Finished Product Delivery - Waiting Confirmation</label>
            </value>
            <value>
                <fullName>Finished Product Delivery - Planned</fullName>
            </value>
            <value>
                <fullName>Finished Product - Released from Manufacturing Plant</fullName>
            </value>
            <value>
                <fullName>Finished Product - Released from Manufacturing Plant Reversed</fullName>
            </value>
            <value>
                <fullName>Finished Product - Shipped from Manufacturing Plant</fullName>
            </value>
            <value>
                <fullName>Finished Product - Shipped from Manufacturing Plant Reversed</fullName>
            </value>
            <value>
                <fullName>Finished Product - Received</fullName>
            </value>
            <value>
                <fullName>Finished Product Delivery - Cancelled</fullName>
            </value>
            <value>
                <fullName>Finished Product - Released by Novartis</fullName>
            </value>
            <value>
                <fullName>Finished Product - Released by Novartis Reversed</fullName>
            </value>
            <value>
                <fullName>Finished Product - Shipped to Treatment Center</fullName>
            </value>
            <value>
                <fullName>Finished Product - Shipped to Treatment Center Reversed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>