force-app/main/default/objects/Case/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Team selected</description>
    <inlineHelpText>Team selected</inlineHelpText>
    <label>Team</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Team)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>