force-app/main/default/objects/Case/fields/TreatmentKey__c.field-meta.xml
<CustomField>
    <fullName>TreatmentKey__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique Key of the treatment</inlineHelpText>
    <label>Treatment Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>