force-app/main/default/objects/Case/fields/Wizard__c.field-meta.xml
<CustomField>
    <fullName>Wizard__c</fullName>
    <description>Name of the wizard selected</description>
    <inlineHelpText>Name of the wizard selected</inlineHelpText>
    <label>Wizard</label>
    <length>200</length>
    <type>Text</type>
</CustomField>