force-app/main/default/objects/Case/recordTypes/Enrollment.recordType-meta.xml
<RecordType>
    <fullName>Enrollment</fullName>
    <active>true</active>
    <businessProcess>Program %28Enrollment%29</businessProcess>
    <description>Used as Parent Case for the Treatments</description>
    <label>Enrollment</label>
</RecordType>