force-app/main/default/objects/Case/recordTypes/OBC.recordType-meta.xml
<RecordType>
    <fullName>OBC</fullName>
    <active>true</active>
    <businessProcess>Program %28Enrollment%29</businessProcess>
    <description>Outcome Based Contract</description>
    <label>OBC</label>
</RecordType>