force-app/main/default/objects/Case/recordTypes/Patient_Services.recordType-meta.xml
<RecordType>
    <fullName>Patient_Services</fullName>
    <active>true</active>
    <businessProcess>PatientServices</businessProcess>
    <label>Kymriah Hub Services / Patient Services</label>
</RecordType>