force-app/main/default/objects/Case/recordTypes/Treatment.recordType-meta.xml
<RecordType>
    <fullName>Treatment</fullName>
    <active>true</active>
    <businessProcess>Treatment</businessProcess>
    <description>Used for the regular Treatments / holding the core PRF information</description>
    <label>Treatment</label>
</RecordType>