force-app/main/default/objects/Case/listViews/All_Open_Patient_Services.listView-meta.xml
<ListView>
    <fullName>All_Open_Patient_Services</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Patient_Services</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed,Completed</value>
    </filters>
    <label>All Open Patient Services</label>
</ListView>