force-app/main/default/objects/Case/listViews/All_with_Recordtype.listView-meta.xml
<ListView>
    <fullName>All_with_Recordtype</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All with Recordtype</label>
</ListView>