force-app/main/default/objects/Case/listViews/ApproverQueueADF_Case.listView-meta.xml
<ListView>
    <fullName>ApproverQueueADF_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Approver Queue ADF</label>
    <queue>ApproverQueueADF</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>