force-app/main/default/objects/Case/listViews/ApproverQueuePRF_Case.listView-meta.xml
<ListView>
    <fullName>ApproverQueuePRF_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Approver Queue PRF</label>
    <queue>ApproverQueuePRF</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>