force-app/main/default/objects/Case/listViews/EUKymrah_Case.listView-meta.xml
<ListView>
    <fullName>EUKymrah_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>EU - Kymriah</label>
    <queue>EUKymrah</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>