force-app/main/default/objects/Case/listViews/US_Patient_Services_Case.listView-meta.xml
<ListView>
    <fullName>US_Patient_Services_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>US - Patient Services</label>
    <queue>US_Patient_Services</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>