force-app/main/default/objects/Case/listViews/USKymrah_Case.listView-meta.xml
<ListView>
    <fullName>USKymrah_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>US - Kymriah</label>
    <queue>USKymrah</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>